--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,16 @@
-default: &default
-  adapter: sqlite3
+development:
+  adapter: postgresql
+  database: faithfulword_development
+  pool: 5
+  timeout: 5000
+test:
+  adapter: postgresql
+  database: faithfulword_test
   pool: 5
   timeout: 5000
 
-development:
-  <<: *default
-  database: db/development.sqlite3
-
-ttest:
-  <<: *default
-  database: db/test.sqlite3
-
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: faithfulword_production
+  pool: 5
+  timeout: 5000
